# altvote

./: .gitignore  manage.py  pyproject.toml
altvote/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
polls/: admin.py  mixins.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
polls/migrations/: 0001_initial.py  0002_rankedvote_is_preferential.py  0003_comment_parent.py  0004_comment_dislikes_count_comment_likes_count_and_more.py  0005_option_preferential_votes_option_ranked_points_and_more.py
templates/: login.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
